# sveltewind-fastmongo-template

./: .gitignore
client/: Dockerfile  package-lock.json  package.json
server/: Dockerfile  pyproject.toml
